byFields/K8S/lab0415/ingress/aws9-svc-deploy.yml
---
# shop service
apiVersion: v1
kind: Service
metadata:
  name: aws9-svc-shop
spec:
  type: ClusterIP
  selector:
    app: shop
  ports:
  - port: 80
    targetPort: 80
---
# shop deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop
  template:   #pod
    metadata:
      labels:
        app: shop
    spec:
      containers:
      - name: shop-ctn
        image: kuzwolka/aws9:green
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32M"
            cpu: "0.25"
          limits:
            memory: "64M"
            cpu: "1"
---
# blog service
apiVersion: v1
kind: Service
metadata:
  name: aws9-svc-blog
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
  - port: 80
    targetPort: 80
---
# blog deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:   #pod
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog-ctn
        image: kuzwolka/aws9:blue
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32M"
            cpu: "0.25"
          limits:
            memory: "64M"
            cpu: "1"
